Revamp homepage layout

--- a/index.html
+++ b/index.html
@@ -1,86 +1,312 @@
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>18DAO 一把刀實用查詢</title>
+    <meta name="keywords" content="一把刀,實用查詢,國語辭典,中文字典,漢語詞典,外文詞典" />
+    <meta name="description" content="多語言一把刀實用查詢系列網站，始於2005年，致力於提供各類實用查詢信息，不斷為網民提供更優質的資訊服務。" />
+    <meta name="verify-v1" content="Qsep+eu1kdIVOBIgH1zRTyFBcO1aZyQ87mdh37E/FWQ=" />
+    <meta name="MobileOptimized" content="width" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta http-equiv="cleartype" content="on" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7763986334422934" crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-241337-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);} 
+        gtag('js', new Date());
+        gtag('config', 'UA-241337-5');
+    </script>
+    <style>
+        :root {
+            color-scheme: light;
+            --bg-gradient: radial-gradient(circle at top left, #f8fafc, #e8edf5 45%, #dde5f2);
+            --card-bg: rgba(255, 255, 255, 0.85);
+            --card-border: rgba(29, 78, 216, 0.12);
+            --accent: #1d4ed8;
+            --accent-soft: rgba(29, 78, 216, 0.12);
+            --text-primary: #111827;
+            --text-secondary: #4b5563;
+        }
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>18DAO 一把刀實用查詢</title>
-		<meta name="keywords" content="一把刀,實用查詢,國語辭典,中文字典,漢語詞典,外文詞典">
-		<meta name="description" content="多語言一把刀實用查詢系列網站，始於2005年，致力於提供各類實用查詢信息，不斷為網民提供更優質的資訊服務。">
-		<meta name="verify-v1" content="Qsep+eu1kdIVOBIgH1zRTyFBcO1aZyQ87mdh37E/FWQ=" />
-		<meta name="MobileOptimized" content="width" />
-		<meta name="HandheldFriendly" content="true" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="cleartype" content="on" />
-		<!--
-		<script data-ad-client="ca-pub-8670212889350560" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		-->
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7763986334422934" crossorigin="anonymous" type="5ecfac430f60c5e43243e923-text/javascript"></script>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-241337-5" type="5ecfac430f60c5e43243e923-text/javascript"></script>
-		<script type="5ecfac430f60c5e43243e923-text/javascript">
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'UA-241337-5');
-		</script>
-	</head>
-	<body style="text-align: center">
-		<p align=center>
-			<br />
-			<img alt="18dao logo" src="18dao.gif" border="0px" width="64px" height="64px" />
-			<br />
-		</p>
-		<p>多語言一把刀實用查詢系列網站，始於2005年，致力於提供各類實用查詢信息，不斷為網民提供更優質的資訊服務。</p>
-		<hr color="#FF0000" width="80%">
-		<p align=center>
-			一把刀實用查詢
-			[ <a href="https://tw.18dao.net">💻繁體中文</a> ]
-			[ <a href="https://tw.m.18dao.net">📱行動版本</a> ]
-		</p>
-		<hr color="#FF0000" width="80%">
-		<p align=center>
-			新推出：國語辭典系列 (中華民國教育部釋出官方資料)
-		</p>
-		<p align=center>
-			《<a href="https://zidian.18dao.net">📗國語小字典</a>》
-			《<a href="https://cidian.18dao.net">📙國語辭典簡編本</a>》
-			《<a href="https://dacidian.18dao.net">📘重編國語辭典修訂本</a>》
-			《<a href="https://chengyu.18dao.net">📕成語典</a>》
-		</p>
-		<hr color="#FF0000" width="80%">
-		<p align=center>
-			《<a href="https://luanma.18dao.net">💩亂碼糾正詞典</a>》
-			《<a href="https://bishun.18dao.net">✍️筆順字典</a>》
-			《<a href="https://www.emojiall.com/zh-hant">Emoji😄表情百科</a>》
-			《<a href="https://copy.emojiall.com/zh-hant">Emoji✂複製粘貼</a>》
-            《<a href="https://zh-hant.ipshu.com/">IP地址搜尋定位</a>》
-		</p>
-		<hr color="#FF0000" width="80%">
-		<p align=center>
-			原18dao.cn系列
-		</p>
-		<p align=center>
-			《<a href="https://zhongwenzidian.18dao.net/zh-hant">中文字典</a>》
-			《<a href="https://chengyucidian.18dao.net/zh-hant">成語詞典</a>》
-			《<a href="https://yinghancidian.18dao.net/zh-hant">英漢詞典 (English-Chinese Dictionary)</a>》
-			《<a href="https://hanyingcidian.18dao.net/zh-hant">漢英詞典 (Chinese-English Dictionary)</a>》
+        * {
+            box-sizing: border-box;
+        }
 
-			《<a href="https://hanyucidian.18dao.net/zh-hant">漢語詞典</a>》
-			《<a href="https://zhonghuachengyu.18dao.net/">中華成語大詞典</a>》
+        body {
+            margin: 0;
+            font-family: "Noto Sans TC", "PingFang TC", "Microsoft JhengHei", "Helvetica Neue", Arial, sans-serif;
+            background: var(--bg-gradient);
+            color: var(--text-primary);
+            line-height: 1.65;
+        }
 
-			《<a href="https://rihancidian.18dao.net/zh-hant">日漢詞典 (日本語-中国語 辞書)</a>》
-		</p>
-		<hr color="#FF0000" width="80%">
-		<p align="center">1998-2024 v1.10 网站备案号：<a href="https://beian.miit.gov.cn/#/Integrated/index" rel="nofollow" target="new">鄂B2-20110095-6</a>、公安备案号：<a href="http://www.beian.gov.cn/" rel="nofollow" target="new">42010302000316</a></p>
-		<p><a href="http://www.027.net/">武汉市劲捷电子信息有限公司</a> 版权所有</p>
-		<p>注意：为遵守用户所在地区法律法规，本站部分内容只针对部分国家和地区开放访问，敬请谅解。</p>
-		<p align=center>
-			18dao.com | 
-			18dao.net |
-			18dao.org | 
-			18dao.info | 
-			18dao.cn
-		</p>
-<!-- Not Drupal, Not MediaWiki, Only HTML -->
-	<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="5ecfac430f60c5e43243e923-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9810dea018fddf07","serverTiming":{"name":{"cfExtPri":true,"cfEdge":true,"cfOrigin":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"version":"2025.8.0","token":"dd214a768b354170bfb6ed42ef130967"}' crossorigin="anonymous"></script>
+        a {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        a:hover,
+        a:focus {
+            color: var(--accent);
+        }
+
+        .page {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: clamp(1.5rem, 2vw + 1rem, 3rem) clamp(1.25rem, 1.5vw + 0.75rem, 3rem) 4rem;
+        }
+
+        .hero {
+            background: rgba(255, 255, 255, 0.86);
+            border-radius: 28px;
+            padding: clamp(2rem, 3vw + 1.5rem, 3.5rem);
+            box-shadow: 0 24px 60px rgba(15, 23, 42, 0.08);
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .hero::after {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background: radial-gradient(circle at 20% 20%, rgba(59, 130, 246, 0.12), transparent 60%),
+                        radial-gradient(circle at 80% 30%, rgba(147, 197, 253, 0.16), transparent 55%);
+            pointer-events: none;
+        }
+
+        .hero-content {
+            position: relative;
+        }
+
+        .logo {
+            width: 80px;
+            height: 80px;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(37, 99, 235, 0.2);
+            margin-bottom: 1.25rem;
+        }
+
+        h1 {
+            margin: 0 0 0.75rem;
+            font-size: clamp(1.8rem, 2vw + 1.4rem, 2.4rem);
+            letter-spacing: 0.05em;
+        }
+
+        .hero p {
+            margin: 0 auto 1.75rem;
+            max-width: 38em;
+            color: var(--text-secondary);
+            font-size: 1.05rem;
+        }
+
+        .cta-group {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .cta-button {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.75rem 1.5rem;
+            border-radius: 999px;
+            background: var(--accent);
+            color: #fff;
+            font-weight: 600;
+            box-shadow: 0 18px 40px rgba(29, 78, 216, 0.25);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+
+        .cta-button.secondary {
+            background: rgba(29, 78, 216, 0.12);
+            color: var(--accent);
+            box-shadow: none;
+        }
+
+        .cta-button:hover,
+        .cta-button:focus {
+            transform: translateY(-2px);
+            box-shadow: 0 18px 38px rgba(29, 78, 216, 0.3);
+        }
+
+        .cta-button.secondary:hover,
+        .cta-button.secondary:focus {
+            background: rgba(29, 78, 216, 0.18);
+            box-shadow: inset 0 0 0 1px rgba(29, 78, 216, 0.35);
+        }
+
+        main {
+            margin-top: clamp(2.5rem, 4vw + 2rem, 4rem);
+            display: flex;
+            flex-direction: column;
+            gap: clamp(2rem, 3vw + 1.5rem, 3rem);
+        }
+
+        section {
+            background: rgba(255, 255, 255, 0.92);
+            padding: clamp(1.5rem, 2vw + 1rem, 2.5rem);
+            border-radius: 24px;
+            box-shadow: 0 20px 50px rgba(15, 23, 42, 0.06);
+        }
+
+        section h2 {
+            margin: 0 0 1.5rem;
+            font-size: 1.4rem;
+            display: flex;
+            align-items: center;
+            gap: 0.6rem;
+        }
+
+        section h2 span {
+            font-size: 0.85rem;
+            font-weight: normal;
+            color: var(--text-secondary);
+            text-transform: uppercase;
+            letter-spacing: 0.08em;
+        }
+
+        .link-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 1rem;
+        }
+
+        .card-link {
+            display: flex;
+            align-items: flex-start;
+            gap: 0.75rem;
+            padding: 1.1rem 1.25rem;
+            background: var(--card-bg);
+            border-radius: 18px;
+            border: 1px solid var(--card-border);
+            transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
+        }
+
+        .card-link:hover,
+        .card-link:focus {
+            transform: translateY(-3px);
+            box-shadow: 0 16px 32px rgba(15, 23, 42, 0.1);
+            border-color: rgba(29, 78, 216, 0.3);
+        }
+
+        .card-link span {
+            display: block;
+            color: var(--text-secondary);
+            font-size: 0.95rem;
+            margin-top: 0.3rem;
+        }
+
+        .divider {
+            height: 1px;
+            background: linear-gradient(90deg, transparent, rgba(148, 163, 184, 0.35), transparent);
+            margin: 2.5rem 0 0;
+        }
+
+        footer {
+            margin-top: 2.5rem;
+            text-align: center;
+            color: var(--text-secondary);
+            font-size: 0.9rem;
+        }
+
+        footer p {
+            margin: 0.4rem 0;
+        }
+
+        footer .domain-list {
+            display: inline-flex;
+            flex-wrap: wrap;
+            gap: 0.6rem;
+            margin-top: 0.4rem;
+            font-weight: 600;
+            color: var(--text-primary);
+        }
+
+        @media (max-width: 640px) {
+            .hero {
+                border-radius: 24px;
+            }
+
+            .logo {
+                width: 72px;
+                height: 72px;
+            }
+
+            .link-grid {
+                grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+            }
+
+            .card-link {
+                padding: 1rem 1.1rem;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="page">
+        <header class="hero">
+            <div class="hero-content">
+                <img class="logo" src="18dao.gif" alt="18DAO 標誌" width="80" height="80" />
+                <h1>18DAO 一把刀實用查詢</h1>
+                <p>多語言一把刀實用查詢系列網站始於 2005 年，致力於提供字詞查詢、語言工具與實用資訊，一路陪伴華語使用者探索文字的無窮魅力。</p>
+                <div class="cta-group">
+                    <a class="cta-button" href="https://tw.18dao.net">💻 繁體中文</a>
+                    <a class="cta-button secondary" href="https://tw.m.18dao.net">📱 行動版本</a>
+                </div>
+            </div>
+        </header>
+
+        <main>
+            <section>
+                <h2>國語辭典系列 <span>NEW</span></h2>
+                <div class="link-grid">
+                    <a class="card-link" href="https://zidian.18dao.net">📗 國語小字典<span>教育部官方資料，小學必備字詞解說。</span></a>
+                    <a class="card-link" href="https://cidian.18dao.net">📙 國語辭典簡編本<span>兼具深度與效率的實用辭典。</span></a>
+                    <a class="card-link" href="https://dacidian.18dao.net">📘 重編國語辭典修訂本<span>完整收錄字詞，專業學習首選。</span></a>
+                    <a class="card-link" href="https://chengyu.18dao.net">📕 成語典<span>整理常用成語，提供詳盡釋義與例句。</span></a>
+                </div>
+            </section>
+
+            <section>
+                <h2>實用工具</h2>
+                <div class="link-grid">
+                    <a class="card-link" href="https://luanma.18dao.net">💩 亂碼糾正詞典<span>快速修正文字編碼問題。</span></a>
+                    <a class="card-link" href="https://bishun.18dao.net">✍️ 筆順字典<span>標準筆畫示意，手寫學習好幫手。</span></a>
+                    <a class="card-link" href="https://www.emojiall.com/zh-hant">😄 Emoji 表情百科<span>查詢各式表情符號含義。</span></a>
+                    <a class="card-link" href="https://copy.emojiall.com/zh-hant">✂ Emoji 複製粘貼<span>一鍵複製常用表情符號。</span></a>
+                    <a class="card-link" href="https://zh-hant.ipshu.com/">📍 IP 地址搜尋定位<span>快速定位與查詢 IP 資訊。</span></a>
+                </div>
+            </section>
+
+            <section>
+                <h2>原 18dao.cn 系列</h2>
+                <div class="link-grid">
+                    <a class="card-link" href="https://zhongwenzidian.18dao.net/zh-hant">📚 中文字典<span>常用漢字釋義與用法。</span></a>
+                    <a class="card-link" href="https://chengyucidian.18dao.net/zh-hant">🀄 成語詞典<span>收錄中華成語，提供拼音、解釋、例句。</span></a>
+                    <a class="card-link" href="https://yinghancidian.18dao.net/zh-hant">🌐 英漢詞典<span>雙語對照，助力英文學習。</span></a>
+                    <a class="card-link" href="https://hanyingcidian.18dao.net/zh-hant">🗣️ 漢英詞典<span>提供多種語境翻譯與例句。</span></a>
+                    <a class="card-link" href="https://hanyucidian.18dao.net/zh-hant">📖 漢語詞典<span>豐富詞語解釋與延伸資料。</span></a>
+                    <a class="card-link" href="https://zhonghuachengyu.18dao.net/">🏮 中華成語大詞典<span>經典成語全面整理。</span></a>
+                    <a class="card-link" href="https://rihancidian.18dao.net/zh-hant">🗾 日漢詞典<span>日本語／中文雙向查詢。</span></a>
+                </div>
+            </section>
+        </main>
+
+        <div class="divider" aria-hidden="true"></div>
+
+        <footer>
+            <p>1998-2024 v1.10 網站備案號：<a href="https://beian.miit.gov.cn/#/Integrated/index" rel="nofollow" target="_blank">鄂B2-20110095-6</a>、公安備案號：<a href="http://www.beian.gov.cn/" rel="nofollow" target="_blank">42010302000316</a></p>
+            <p><a href="http://www.027.net/">武漢市勁捷電子信息有限公司</a> 版權所有</p>
+            <p>注意：為遵守使用者所在地法律法規，本站部分內容僅對部分國家與地區開放訪問，敬請見諒。</p>
+            <div class="domain-list">18dao.com · 18dao.net · 18dao.org · 18dao.info · 18dao.cn</div>
+        </footer>
+    </div>
+    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="5ecfac430f60c5e43243e923-|49" defer></script>
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9810dea018fddf07","serverTiming":{"name":{"cfExtPri":true,"cfEdge":true,"cfOrigin":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"version":"2025.8.0","token":"dd214a768b354170bfb6ed42ef130967"}' crossorigin="anonymous"></script>
 </body>
 </html>
