重設首頁樣式

--- a/index.html
+++ b/index.html
@@ -1,86 +1,351 @@
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+    <meta charset="utf-8" />
+    <title>18DAO 一把刀實用查詢</title>
+    <meta name="keywords" content="一把刀,實用查詢,國語辭典,中文字典,漢語詞典,外文詞典" />
+    <meta name="description" content="多語言一把刀實用查詢系列網站，始於2005年，致力於提供各類實用查詢信息，不斷為網民提供更優質的資訊服務。" />
+    <meta name="verify-v1" content="Qsep+eu1kdIVOBIgH1zRTyFBcO1aZyQ87mdh37E/FWQ=" />
+    <meta name="MobileOptimized" content="width" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="cleartype" content="on" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-241337-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-241337-5');
+    </script>
+    <style>
+        :root {
+            --bg-gradient: radial-gradient(circle at top, #f2f6ff, #f8fbff 40%, #eef2ff 100%);
+            --card-bg: rgba(255, 255, 255, 0.82);
+            --card-border: rgba(99, 102, 241, 0.12);
+            --accent: #4f46e5;
+            --accent-soft: rgba(79, 70, 229, 0.12);
+            --text-primary: #1f2937;
+            --text-secondary: #4b5563;
+            --max-width: min(1080px, 92vw);
+        }
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>18DAO 一把刀實用查詢</title>
-		<meta name="keywords" content="一把刀,實用查詢,國語辭典,中文字典,漢語詞典,外文詞典">
-		<meta name="description" content="多語言一把刀實用查詢系列網站，始於2005年，致力於提供各類實用查詢信息，不斷為網民提供更優質的資訊服務。">
-		<meta name="verify-v1" content="Qsep+eu1kdIVOBIgH1zRTyFBcO1aZyQ87mdh37E/FWQ=" />
-		<meta name="MobileOptimized" content="width" />
-		<meta name="HandheldFriendly" content="true" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="cleartype" content="on" />
-		<!--
-		<script data-ad-client="ca-pub-8670212889350560" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		-->
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7763986334422934" crossorigin="anonymous" type="5ecfac430f60c5e43243e923-text/javascript"></script>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-241337-5" type="5ecfac430f60c5e43243e923-text/javascript"></script>
-		<script type="5ecfac430f60c5e43243e923-text/javascript">
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'UA-241337-5');
-		</script>
-	</head>
-	<body style="text-align: center">
-		<p align=center>
-			<br />
-			<img alt="18dao logo" src="18dao.gif" border="0px" width="64px" height="64px" />
-			<br />
-		</p>
-		<p>多語言一把刀實用查詢系列網站，始於2005年，致力於提供各類實用查詢信息，不斷為網民提供更優質的資訊服務。</p>
-		<hr color="#FF0000" width="80%">
-		<p align=center>
-			一把刀實用查詢
-			[ <a href="https://tw.18dao.net">💻繁體中文</a> ]
-			[ <a href="https://tw.m.18dao.net">📱行動版本</a> ]
-		</p>
-		<hr color="#FF0000" width="80%">
-		<p align=center>
-			新推出：國語辭典系列 (中華民國教育部釋出官方資料)
-		</p>
-		<p align=center>
-			《<a href="https://zidian.18dao.net">📗國語小字典</a>》
-			《<a href="https://cidian.18dao.net">📙國語辭典簡編本</a>》
-			《<a href="https://dacidian.18dao.net">📘重編國語辭典修訂本</a>》
-			《<a href="https://chengyu.18dao.net">📕成語典</a>》
-		</p>
-		<hr color="#FF0000" width="80%">
-		<p align=center>
-			《<a href="https://luanma.18dao.net">💩亂碼糾正詞典</a>》
-			《<a href="https://bishun.18dao.net">✍️筆順字典</a>》
-			《<a href="https://www.emojiall.com/zh-hant">Emoji😄表情百科</a>》
-			《<a href="https://copy.emojiall.com/zh-hant">Emoji✂複製粘貼</a>》
-            《<a href="https://zh-hant.ipshu.com/">IP地址搜尋定位</a>》
-		</p>
-		<hr color="#FF0000" width="80%">
-		<p align=center>
-			原18dao.cn系列
-		</p>
-		<p align=center>
-			《<a href="https://zhongwenzidian.18dao.net/zh-hant">中文字典</a>》
-			《<a href="https://chengyucidian.18dao.net/zh-hant">成語詞典</a>》
-			《<a href="https://yinghancidian.18dao.net/zh-hant">英漢詞典 (English-Chinese Dictionary)</a>》
-			《<a href="https://hanyingcidian.18dao.net/zh-hant">漢英詞典 (Chinese-English Dictionary)</a>》
+        * {
+            box-sizing: border-box;
+        }
 
-			《<a href="https://hanyucidian.18dao.net/zh-hant">漢語詞典</a>》
-			《<a href="https://zhonghuachengyu.18dao.net/">中華成語大詞典</a>》
+        body {
+            margin: 0;
+            font-family: 'Noto Sans TC', 'PingFang TC', 'Heiti TC', 'Microsoft JhengHei', system-ui, -apple-system,
+                BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            background: var(--bg-gradient);
+            color: var(--text-primary);
+            display: flex;
+            justify-content: center;
+            min-height: 100vh;
+        }
 
-			《<a href="https://rihancidian.18dao.net/zh-hant">日漢詞典 (日本語-中国語 辞書)</a>》
-		</p>
-		<hr color="#FF0000" width="80%">
-		<p align="center">1998-2024 v1.10 网站备案号：<a href="https://beian.miit.gov.cn/#/Integrated/index" rel="nofollow" target="new">鄂B2-20110095-6</a>、公安备案号：<a href="http://www.beian.gov.cn/" rel="nofollow" target="new">42010302000316</a></p>
-		<p><a href="http://www.027.net/">武汉市劲捷电子信息有限公司</a> 版权所有</p>
-		<p>注意：为遵守用户所在地区法律法规，本站部分内容只针对部分国家和地区开放访问，敬请谅解。</p>
-		<p align=center>
-			18dao.com | 
-			18dao.net |
-			18dao.org | 
-			18dao.info | 
-			18dao.cn
-		</p>
-<!-- Not Drupal, Not MediaWiki, Only HTML -->
-	<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="5ecfac430f60c5e43243e923-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9810dea018fddf07","serverTiming":{"name":{"cfExtPri":true,"cfEdge":true,"cfOrigin":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"version":"2025.8.0","token":"dd214a768b354170bfb6ed42ef130967"}' crossorigin="anonymous"></script>
+        .page {
+            width: 100%;
+            max-width: var(--max-width);
+            padding: clamp(2rem, 5vw, 4rem) clamp(1.5rem, 4vw, 3rem);
+        }
+
+        header {
+            display: grid;
+            gap: 1.5rem;
+            justify-items: center;
+            text-align: center;
+        }
+
+        .logo-wrapper {
+            width: 96px;
+            height: 96px;
+            display: grid;
+            place-items: center;
+            border-radius: 28px;
+            background: linear-gradient(135deg, rgba(79, 70, 229, 0.15), rgba(14, 165, 233, 0.12));
+            box-shadow: 0 18px 45px rgba(15, 23, 42, 0.12);
+        }
+
+        .logo-wrapper img {
+            width: 72px;
+            height: 72px;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: clamp(1.8rem, 4vw, 2.6rem);
+            letter-spacing: 0.04em;
+        }
+
+        .intro {
+            margin: 0;
+            max-width: 56ch;
+            color: var(--text-secondary);
+            line-height: 1.6;
+        }
+
+        .highlight-links {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.75rem;
+            justify-content: center;
+        }
+
+        .highlight-links a {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.35rem;
+            padding: 0.65rem 1.15rem;
+            border-radius: 999px;
+            font-weight: 600;
+            text-decoration: none;
+            color: var(--accent);
+            background: var(--card-bg);
+            border: 1px solid var(--card-border);
+            box-shadow: 0 10px 25px rgba(15, 23, 42, 0.08);
+            transition: transform 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
+        }
+
+        .highlight-links a:hover,
+        .highlight-links a:focus-visible {
+            transform: translateY(-2px);
+            box-shadow: 0 16px 35px rgba(79, 70, 229, 0.18);
+            color: #312e81;
+            outline: none;
+        }
+
+        main {
+            margin-top: clamp(2.5rem, 6vw, 4rem);
+            display: grid;
+            gap: clamp(2rem, 5vw, 3rem);
+        }
+
+        section {
+            background: var(--card-bg);
+            border-radius: 28px;
+            padding: clamp(1.5rem, 4vw, 2.5rem);
+            border: 1px solid var(--card-border);
+            box-shadow: 0 18px 40px rgba(15, 23, 42, 0.12);
+        }
+
+        section h2 {
+            margin-top: 0;
+            margin-bottom: 1rem;
+            font-size: clamp(1.3rem, 2.8vw, 1.7rem);
+        }
+
+        section p.description {
+            margin-top: 0;
+            margin-bottom: 1.5rem;
+            color: var(--text-secondary);
+            line-height: 1.6;
+        }
+
+        .link-grid {
+            display: grid;
+            gap: 0.8rem;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+        }
+
+        .link-card {
+            display: flex;
+            flex-direction: column;
+            gap: 0.3rem;
+            padding: 1rem 1.15rem;
+            border-radius: 20px;
+            background: rgba(255, 255, 255, 0.92);
+            border: 1px solid rgba(99, 102, 241, 0.18);
+            text-decoration: none;
+            color: var(--text-primary);
+            transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
+        }
+
+        .link-card span {
+            font-size: 0.9rem;
+            color: var(--text-secondary);
+        }
+
+        .link-card strong {
+            font-weight: 600;
+            font-size: 1.05rem;
+        }
+
+        .link-card:hover,
+        .link-card:focus-visible {
+            transform: translateY(-3px);
+            border-color: rgba(79, 70, 229, 0.4);
+            box-shadow: 0 16px 36px rgba(79, 70, 229, 0.22);
+            outline: none;
+        }
+
+        footer {
+            margin-top: clamp(2.5rem, 6vw, 3.5rem);
+            text-align: center;
+            color: var(--text-secondary);
+            font-size: 0.9rem;
+            line-height: 1.6;
+        }
+
+        footer a {
+            color: var(--accent);
+            text-decoration: none;
+        }
+
+        footer a:hover,
+        footer a:focus-visible {
+            text-decoration: underline;
+            outline: none;
+        }
+
+        .domain-list {
+            margin: 1.2rem 0 0;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.35rem;
+            justify-content: center;
+        }
+
+        .domain-list span {
+            padding: 0.45rem 0.85rem;
+            border-radius: 999px;
+            background: var(--accent-soft);
+            color: var(--accent);
+            font-weight: 500;
+        }
+
+        @media (max-width: 640px) {
+            header {
+                gap: 1.2rem;
+            }
+
+            .logo-wrapper {
+                width: 84px;
+                height: 84px;
+            }
+
+            .logo-wrapper img {
+                width: 62px;
+                height: 62px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="page">
+        <header>
+            <div class="logo-wrapper">
+                <img src="18dao.gif" alt="18DAO 標誌" />
+            </div>
+            <h1>18DAO 一把刀實用查詢</h1>
+            <p class="intro">始於 2005 年的多語言實用查詢平台，為華語用戶聚合詞典、工具與生活資訊，讓常用資料觸手可及。</p>
+            <div class="highlight-links">
+                <a href="https://tw.18dao.net">💻 繁體中文版本</a>
+                <a href="https://tw.m.18dao.net">📱 行動版網站</a>
+            </div>
+        </header>
+
+        <main>
+            <section>
+                <h2>國語辭典系列</h2>
+                <p class="description">採用教育部釋出官方資料，提供從基礎到進階的國語詞彙查詢資源。</p>
+                <div class="link-grid">
+                    <a class="link-card" href="https://zidian.18dao.net">
+                        <strong>📗 國語小字典</strong>
+                        <span>快速查找常用字詞</span>
+                    </a>
+                    <a class="link-card" href="https://cidian.18dao.net">
+                        <strong>📙 國語辭典簡編本</strong>
+                        <span>精要釋義，一目瞭然</span>
+                    </a>
+                    <a class="link-card" href="https://dacidian.18dao.net">
+                        <strong>📘 重編國語辭典修訂本</strong>
+                        <span>完整權威的辭典資源</span>
+                    </a>
+                    <a class="link-card" href="https://chengyu.18dao.net">
+                        <strong>📕 成語典</strong>
+                        <span>精選成語與典故解說</span>
+                    </a>
+                </div>
+            </section>
+
+            <section>
+                <h2>特色工具與延伸服務</h2>
+                <p class="description">針對不同場景打造的便捷工具，涵蓋輸入法、符號、網路資訊等多重需求。</p>
+                <div class="link-grid">
+                    <a class="link-card" href="https://luanma.18dao.net">
+                        <strong>💩 亂碼糾正詞典</strong>
+                        <span>處理亂碼與編碼問題</span>
+                    </a>
+                    <a class="link-card" href="https://bishun.18dao.net">
+                        <strong>✍️ 筆順字典</strong>
+                        <span>動畫筆畫展示與練習</span>
+                    </a>
+                    <a class="link-card" href="https://www.emojiall.com/zh-hant">
+                        <strong>😄 Emoji 表情百科</strong>
+                        <span>完整 Emoji 說明與用法</span>
+                    </a>
+                    <a class="link-card" href="https://copy.emojiall.com/zh-hant">
+                        <strong>✂ Emoji 複製貼上</strong>
+                        <span>快速複製常用圖示</span>
+                    </a>
+                    <a class="link-card" href="https://zh-hant.ipshu.com/">
+                        <strong>📡 IP 地址搜尋定位</strong>
+                        <span>即時查詢位置與網路資訊</span>
+                    </a>
+                </div>
+            </section>
+
+            <section>
+                <h2>原 18dao.cn 系列</h2>
+                <p class="description">延續經典內容，匯集多語詞典資源，支援中、英、日多語對照查詢。</p>
+                <div class="link-grid">
+                    <a class="link-card" href="https://zhongwenzidian.18dao.net/zh-hant">
+                        <strong>中文字典</strong>
+                        <span>繁體中文專業解析</span>
+                    </a>
+                    <a class="link-card" href="https://chengyucidian.18dao.net/zh-hant">
+                        <strong>成語詞典</strong>
+                        <span>涵蓋常見與少見成語</span>
+                    </a>
+                    <a class="link-card" href="https://yinghancidian.18dao.net/zh-hant">
+                        <strong>英漢詞典</strong>
+                        <span>English-Chinese Dictionary</span>
+                    </a>
+                    <a class="link-card" href="https://hanyingcidian.18dao.net/zh-hant">
+                        <strong>漢英詞典</strong>
+                        <span>Chinese-English Dictionary</span>
+                    </a>
+                    <a class="link-card" href="https://hanyucidian.18dao.net/zh-hant">
+                        <strong>漢語詞典</strong>
+                        <span>更深入的漢語解讀</span>
+                    </a>
+                    <a class="link-card" href="https://zhonghuachengyu.18dao.net/">
+                        <strong>中華成語大詞典</strong>
+                        <span>整理豐富成語典故</span>
+                    </a>
+                    <a class="link-card" href="https://rihancidian.18dao.net/zh-hant">
+                        <strong>日漢詞典</strong>
+                        <span>日本語 - 中文對照</span>
+                    </a>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <p>1998-2024 v1.10 网站备案号：<a href="https://beian.miit.gov.cn/#/Integrated/index" rel="nofollow" target="_blank">鄂B2-20110095-6</a> ・ 公安备案号：<a href="http://www.beian.gov.cn/" rel="nofollow" target="_blank">42010302000316</a></p>
+            <p><a href="http://www.027.net/">武汉市劲捷电子信息有限公司</a> 版权所有</p>
+            <p>為遵守各地法律與政策，本站部分內容僅提供於特定地區用戶，敬請見諒。</p>
+            <div class="domain-list">
+                <span>18dao.com</span>
+                <span>18dao.net</span>
+                <span>18dao.org</span>
+                <span>18dao.info</span>
+                <span>18dao.cn</span>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
