--- a/index.html
+++ b/index.html
@@ -1,86 +1,410 @@
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+    <meta charset="utf-8" />
+    <title>18DAO 一把刀實用查詢</title>
+    <meta name="keywords" content="一把刀,實用查詢,國語辭典,中文字典,漢語詞典,外文詞典" />
+    <meta name="description" content="多語言一把刀實用查詢系列網站，始於2005年，致力於提供各類實用查詢信息，不斷為網民提供更優質的資訊服務。" />
+    <meta name="verify-v1" content="Qsep+eu1kdIVOBIgH1zRTyFBcO1aZyQ87mdh37E/FWQ=" />
+    <meta name="MobileOptimized" content="width" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    <meta http-equiv="cleartype" content="on" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7763986334422934" crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-241337-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-241337-5');
+    </script>
+    <style>
+        :root {
+            color-scheme: light;
+            --accent: #2e6be6;
+            --accent-soft: rgba(46, 107, 230, 0.1);
+            --text-primary: #0f172a;
+            --text-secondary: #475569;
+            --surface: rgba(255, 255, 255, 0.9);
+            font-size: 16px;
+        }
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>18DAO 一把刀實用查詢</title>
-		<meta name="keywords" content="一把刀,實用查詢,國語辭典,中文字典,漢語詞典,外文詞典">
-		<meta name="description" content="多語言一把刀實用查詢系列網站，始於2005年，致力於提供各類實用查詢信息，不斷為網民提供更優質的資訊服務。">
-		<meta name="verify-v1" content="Qsep+eu1kdIVOBIgH1zRTyFBcO1aZyQ87mdh37E/FWQ=" />
-		<meta name="MobileOptimized" content="width" />
-		<meta name="HandheldFriendly" content="true" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="cleartype" content="on" />
-		<!--
-		<script data-ad-client="ca-pub-8670212889350560" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		-->
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7763986334422934" crossorigin="anonymous" type="5ecfac430f60c5e43243e923-text/javascript"></script>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-241337-5" type="5ecfac430f60c5e43243e923-text/javascript"></script>
-		<script type="5ecfac430f60c5e43243e923-text/javascript">
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'UA-241337-5');
-		</script>
-	</head>
-	<body style="text-align: center">
-		<p align=center>
-			<br />
-			<img alt="18dao logo" src="18dao.gif" border="0px" width="64px" height="64px" />
-			<br />
-		</p>
-		<p>多語言一把刀實用查詢系列網站，始於2005年，致力於提供各類實用查詢信息，不斷為網民提供更優質的資訊服務。</p>
-		<hr color="#FF0000" width="80%">
-		<p align=center>
-			一把刀實用查詢
-			[ <a href="https://tw.18dao.net">💻繁體中文</a> ]
-			[ <a href="https://tw.m.18dao.net">📱行動版本</a> ]
-		</p>
-		<hr color="#FF0000" width="80%">
-		<p align=center>
-			新推出：國語辭典系列 (中華民國教育部釋出官方資料)
-		</p>
-		<p align=center>
-			《<a href="https://zidian.18dao.net">📗國語小字典</a>》
-			《<a href="https://cidian.18dao.net">📙國語辭典簡編本</a>》
-			《<a href="https://dacidian.18dao.net">📘重編國語辭典修訂本</a>》
-			《<a href="https://chengyu.18dao.net">📕成語典</a>》
-		</p>
-		<hr color="#FF0000" width="80%">
-		<p align=center>
-			《<a href="https://luanma.18dao.net">💩亂碼糾正詞典</a>》
-			《<a href="https://bishun.18dao.net">✍️筆順字典</a>》
-			《<a href="https://www.emojiall.com/zh-hant">Emoji😄表情百科</a>》
-			《<a href="https://copy.emojiall.com/zh-hant">Emoji✂複製粘貼</a>》
-            《<a href="https://zh-hant.ipshu.com/">IP地址搜尋定位</a>》
-		</p>
-		<hr color="#FF0000" width="80%">
-		<p align=center>
-			原18dao.cn系列
-		</p>
-		<p align=center>
-			《<a href="https://zhongwenzidian.18dao.net/zh-hant">中文字典</a>》
-			《<a href="https://chengyucidian.18dao.net/zh-hant">成語詞典</a>》
-			《<a href="https://yinghancidian.18dao.net/zh-hant">英漢詞典 (English-Chinese Dictionary)</a>》
-			《<a href="https://hanyingcidian.18dao.net/zh-hant">漢英詞典 (Chinese-English Dictionary)</a>》
+        * {
+            box-sizing: border-box;
+        }
 
-			《<a href="https://hanyucidian.18dao.net/zh-hant">漢語詞典</a>》
-			《<a href="https://zhonghuachengyu.18dao.net/">中華成語大詞典</a>》
+        body {
+            margin: 0;
+            font-family: 'Noto Sans TC', 'Microsoft JhengHei', 'PingFang TC', 'Helvetica Neue', Arial, sans-serif;
+            background: linear-gradient(135deg, #f5f8ff, #e2ecf9 45%, #f8fbff);
+            color: var(--text-primary);
+            display: flex;
+            justify-content: center;
+            min-height: 100vh;
+        }
 
-			《<a href="https://rihancidian.18dao.net/zh-hant">日漢詞典 (日本語-中国語 辞書)</a>》
-		</p>
-		<hr color="#FF0000" width="80%">
-		<p align="center">1998-2024 v1.10 网站备案号：<a href="https://beian.miit.gov.cn/#/Integrated/index" rel="nofollow" target="new">鄂B2-20110095-6</a>、公安备案号：<a href="http://www.beian.gov.cn/" rel="nofollow" target="new">42010302000316</a></p>
-		<p><a href="http://www.027.net/">武汉市劲捷电子信息有限公司</a> 版权所有</p>
-		<p>注意：为遵守用户所在地区法律法规，本站部分内容只针对部分国家和地区开放访问，敬请谅解。</p>
-		<p align=center>
-			18dao.com | 
-			18dao.net |
-			18dao.org | 
-			18dao.info | 
-			18dao.cn
-		</p>
-<!-- Not Drupal, Not MediaWiki, Only HTML -->
-	<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="5ecfac430f60c5e43243e923-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9810dea018fddf07","serverTiming":{"name":{"cfExtPri":true,"cfEdge":true,"cfOrigin":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"version":"2025.8.0","token":"dd214a768b354170bfb6ed42ef130967"}' crossorigin="anonymous"></script>
+        .page {
+            width: min(1100px, 100%);
+            padding: 4rem 1.5rem 3rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .container {
+            width: 100%;
+            background: var(--surface);
+            border-radius: 28px;
+            box-shadow: 0 28px 70px rgba(15, 23, 42, 0.15);
+            overflow: hidden;
+            backdrop-filter: blur(8px);
+        }
+
+        header {
+            text-align: center;
+            padding: 3rem 2.5rem 2.5rem;
+            background: linear-gradient(135deg, rgba(46, 107, 230, 0.08), rgba(14, 116, 144, 0.08));
+        }
+
+        header .logo {
+            width: 92px;
+            height: 92px;
+            margin: 0 auto;
+            display: grid;
+            place-items: center;
+            border-radius: 26px;
+            background: rgba(255, 255, 255, 0.9);
+            box-shadow: 0 18px 40px rgba(15, 23, 42, 0.18);
+        }
+
+        header .logo img {
+            width: 64px;
+            height: 64px;
+        }
+
+        header h1 {
+            margin: 1.25rem 0 0.75rem;
+            font-size: clamp(1.9rem, 2vw + 1.4rem, 2.8rem);
+            letter-spacing: 0.02em;
+            font-weight: 700;
+        }
+
+        header p {
+            margin: 0 auto;
+            max-width: 640px;
+            color: rgba(15, 23, 42, 0.7);
+            font-size: clamp(1rem, 1vw + 0.9rem, 1.1rem);
+            line-height: 1.8;
+        }
+
+        main {
+            padding: 2.75rem 2.75rem 0;
+            display: flex;
+            flex-direction: column;
+            gap: 2.2rem;
+        }
+
+        .section {
+            background: #ffffff;
+            border-radius: 22px;
+            border: 1px solid rgba(148, 163, 184, 0.18);
+            padding: 1.85rem;
+            box-shadow: 0 22px 46px rgba(15, 23, 42, 0.08);
+        }
+
+        .section h2 {
+            margin: 0 0 0.65rem;
+            font-size: 1.45rem;
+            color: #1e3a8a;
+            font-weight: 700;
+        }
+
+        .section p.subtitle {
+            margin: 0 0 1.4rem;
+            color: var(--text-secondary);
+            font-size: 0.98rem;
+            line-height: 1.7;
+        }
+
+        .links-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 0.9rem;
+        }
+
+        .link-card {
+            display: flex;
+            flex-direction: column;
+            gap: 0.45rem;
+            align-items: flex-start;
+            padding: 1rem 1.15rem;
+            border-radius: 18px;
+            background: linear-gradient(135deg, rgba(46, 107, 230, 0.12), rgba(46, 107, 230, 0.04));
+            border: 1px solid rgba(30, 58, 138, 0.14);
+            text-decoration: none;
+            color: var(--text-primary);
+            transition: transform 0.25s ease, box-shadow 0.25s ease, background 0.25s ease;
+        }
+
+        .link-card strong {
+            font-size: 1.05rem;
+            font-weight: 700;
+            letter-spacing: 0.01em;
+        }
+
+        .link-card span {
+            font-size: 0.88rem;
+            color: var(--text-secondary);
+            font-weight: 500;
+        }
+
+        .link-card:hover,
+        .link-card:focus-visible {
+            transform: translateY(-4px);
+            box-shadow: 0 20px 44px rgba(46, 107, 230, 0.18);
+            background: linear-gradient(135deg, rgba(46, 107, 230, 0.18), rgba(46, 107, 230, 0.06));
+        }
+
+        .inline-links {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.65rem 1.1rem;
+            margin-top: 0.6rem;
+        }
+
+        .inline-links a {
+            color: #1d4ed8;
+            font-weight: 600;
+            text-decoration: none;
+            position: relative;
+            padding-bottom: 0.1rem;
+        }
+
+        .inline-links a::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 2px;
+            background: rgba(29, 78, 216, 0.2);
+            transition: background 0.2s ease;
+        }
+
+        .inline-links a:hover::after,
+        .inline-links a:focus-visible::after {
+            background: rgba(29, 78, 216, 0.65);
+        }
+
+        footer {
+            padding: 2.4rem 2.75rem 2.8rem;
+            border-top: 1px solid rgba(148, 163, 184, 0.25);
+            background: rgba(248, 250, 252, 0.88);
+            text-align: center;
+            font-size: 0.9rem;
+            color: var(--text-secondary);
+            display: flex;
+            flex-direction: column;
+            gap: 0.9rem;
+        }
+
+        footer a {
+            color: #1d4ed8;
+            font-weight: 600;
+            text-decoration: none;
+        }
+
+        footer a:hover,
+        footer a:focus-visible {
+            text-decoration: underline;
+        }
+
+        footer .domain-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 0.6rem;
+            font-weight: 600;
+            color: #1f2937;
+        }
+
+        footer .notice {
+            max-width: 720px;
+            margin: 0 auto;
+            line-height: 1.65;
+        }
+
+        @media (max-width: 768px) {
+            .page {
+                padding: 2.8rem 1.1rem 2.4rem;
+            }
+
+            header {
+                padding: 2.6rem 1.6rem 2.2rem;
+            }
+
+            main {
+                padding: 2.1rem 1.6rem 0;
+            }
+
+            footer {
+                padding: 2.1rem 1.6rem 2.4rem;
+            }
+        }
+
+        @media (max-width: 520px) {
+            .container {
+                border-radius: 22px;
+            }
+
+            .section {
+                padding: 1.55rem;
+            }
+
+            .link-card {
+                padding: 0.95rem 1rem;
+            }
+
+            .link-card strong {
+                font-size: 1rem;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="page">
+        <div class="container">
+            <header>
+                <div class="logo">
+                    <img src="18dao.gif" alt="18DAO logo" />
+                </div>
+                <h1>18DAO 一把刀實用查詢</h1>
+                <p>多語言一把刀實用查詢系列網站，始於2005年，致力於提供各類實用查詢信息，不斷為網民提供更優質的資訊服務。</p>
+            </header>
+            <main>
+                <section class="section">
+                    <h2>一把刀實用查詢</h2>
+                    <p class="subtitle">桌面與行動裝置皆可快速抵達主要站點。</p>
+                    <div class="links-grid">
+                        <a class="link-card" href="https://tw.18dao.net">
+                            <strong>💻 繁體中文</strong>
+                            <span>桌面版入口</span>
+                        </a>
+                        <a class="link-card" href="https://tw.m.18dao.net">
+                            <strong>📱 行動版本</strong>
+                            <span>手機與平板專用</span>
+                        </a>
+                    </div>
+                </section>
+                <section class="section">
+                    <h2>國語辭典系列</h2>
+                    <p class="subtitle">中華民國教育部釋出官方資料，收錄多樣辭典資源，助您快速查找詞彙與成語。</p>
+                    <div class="links-grid">
+                        <a class="link-card" href="https://zidian.18dao.net">
+                            <strong>📗 國語小字典</strong>
+                            <span>教育部官方資料</span>
+                        </a>
+                        <a class="link-card" href="https://cidian.18dao.net">
+                            <strong>📙 國語辭典簡編本</strong>
+                            <span>教育部官方資料</span>
+                        </a>
+                        <a class="link-card" href="https://dacidian.18dao.net">
+                            <strong>📘 重編國語辭典修訂本</strong>
+                            <span>教育部官方資料</span>
+                        </a>
+                        <a class="link-card" href="https://chengyu.18dao.net">
+                            <strong>📕 成語典</strong>
+                            <span>教育部官方資料</span>
+                        </a>
+                    </div>
+                </section>
+                <section class="section">
+                    <h2>實用工具與資源</h2>
+                    <p class="subtitle">輕巧工具涵蓋亂碼、筆順與表情符號等實用資源，協助日常查詢。</p>
+                    <div class="links-grid">
+                        <a class="link-card" href="https://luanma.18dao.net">
+                            <strong>💩 亂碼糾正詞典</strong>
+                            <span>快速辨識與修復亂碼</span>
+                        </a>
+                        <a class="link-card" href="https://bishun.18dao.net">
+                            <strong>✍️ 筆順字典</strong>
+                            <span>筆畫演示與參考</span>
+                        </a>
+                        <a class="link-card" href="https://www.emojiall.com/zh-hant">
+                            <strong>😄 Emoji 表情百科</strong>
+                            <span>完整表情圖文解讀</span>
+                        </a>
+                        <a class="link-card" href="https://copy.emojiall.com/zh-hant">
+                            <strong>✂ Emoji 複製粘貼</strong>
+                            <span>快速複製常用表情</span>
+                        </a>
+                        <a class="link-card" href="https://zh-hant.ipshu.com/">
+                            <strong>📍 IP 地址搜尋定位</strong>
+                            <span>定位與網路資訊</span>
+                        </a>
+                    </div>
+                </section>
+                <section class="section">
+                    <h2>原 18dao.cn 系列</h2>
+                    <p class="subtitle">延續經典查詢服務，提供多語字詞與成語、外語互譯等內容。</p>
+                    <div class="links-grid">
+                        <a class="link-card" href="https://zhongwenzidian.18dao.net/zh-hant">
+                            <strong>《中文字典》</strong>
+                            <span>繁體漢字查詢</span>
+                        </a>
+                        <a class="link-card" href="https://chengyucidian.18dao.net/zh-hant">
+                            <strong>《成語詞典》</strong>
+                            <span>多角度解析成語</span>
+                        </a>
+                        <a class="link-card" href="https://yinghancidian.18dao.net/zh-hant">
+                            <strong>《英漢詞典》</strong>
+                            <span>English-Chinese Dictionary</span>
+                        </a>
+                        <a class="link-card" href="https://hanyingcidian.18dao.net/zh-hant">
+                            <strong>《漢英詞典》</strong>
+                            <span>Chinese-English Dictionary</span>
+                        </a>
+                        <a class="link-card" href="https://hanyucidian.18dao.net/zh-hant">
+                            <strong>《漢語詞典》</strong>
+                            <span>詞語釋義與用法</span>
+                        </a>
+                        <a class="link-card" href="https://zhonghuachengyu.18dao.net/">
+                            <strong>《中華成語大詞典》</strong>
+                            <span>深入掌握成語</span>
+                        </a>
+                        <a class="link-card" href="https://rihancidian.18dao.net/zh-hant">
+                            <strong>《日漢詞典》</strong>
+                            <span>日本語-中国語 辞書</span>
+                        </a>
+                    </div>
+                </section>
+            </main>
+            <footer>
+                <div>
+                    <strong>1998-2024 v1.10</strong>
+                    <span>網站備案號：
+                        <a href="https://beian.miit.gov.cn/#/Integrated/index" rel="nofollow" target="_blank">鄂B2-20110095-6</a>
+                        、公安備案號：
+                        <a href="http://www.beian.gov.cn/" rel="nofollow" target="_blank">42010302000316</a>
+                    </span>
+                </div>
+                <div>
+                    <a href="http://www.027.net/" target="_blank">武漢市勁捷電子信息有限公司</a> 版權所有
+                </div>
+                <p class="notice">注意：為遵守使用者所在地區法律法規，本站部分內容只針對部分國家和地區開放訪問，敬請諒解。</p>
+                <div class="domain-list">
+                    <span>18dao.com</span>
+                    <span>18dao.net</span>
+                    <span>18dao.org</span>
+                    <span>18dao.info</span>
+                    <span>18dao.cn</span>
+                </div>
+            </footer>
+        </div>
+    </div>
+    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="5ecfac430f60c5e43243e923-|49" defer></script>
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9810dea018fddf07","serverTiming":{"name":{"cfExtPri":true,"cfEdge":true,"cfOrigin":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"version":"2025.8.0","token":"dd214a768b354170bfb6ed42ef130967"}' crossorigin="anonymous"></script>
 </body>
 </html>
